# Compilo

./: #Cargo.toml#  Cargo.toml  README.txt  archi.org  makefile  tiger.txt
examples/: clean_code.rs  pretty_print.rs
scripts/: .#cos  automaton.tig  circle.tig  facto  facto.tig  primes.tig
src/: ast.rs  clean.lalrpop  expressions.lalrpop  lib.rs  main.rs  parser.lalrpop
src/ast/: #expression.rs#  display_impls.rs  expression.rs  mod.rs  operators.rs  seq.rs  terminal.rs
