[package]
name = "compilo"
version = "0.1.0"
authors = ["technolapin <clement.chomicki@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.18.1"
regex = "1"